<resources>
    <string name="app_name">实物资产手机平台</string>
    <string name="login_title">用户登录</string>
    <string name="title_activity_a2222">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to login user -->
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_search">查询</string>
    <string name="dialog_user_info_title">用户信息</string>
    <string name="dialog_user_account">用户账号</string>
    <string name="dialog_user_name">用户名</string>
    <string name="dialog_user_department_id">用户所属部门</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to asset search -->
    <string name="asset_search_title">资产查询</string>
    <string name="asset_search_fincode">财务编码</string>
    <string name="asset_search_code">资产编码</string>
    <string name="asset_search_department">使用部门</string>
    <string name="asset_search_type">资产类别</string>

    <!-- Strings related to asset search List -->
    <string name="asset_search_list_title">资产查询结果</string>
    <string name="asset_search_list_serial_number">序号:</string>
    <string name="asset_search_list_code">编码:</string>
    <string name="asset_search_list_name">资产名称:</string>
    <string name="asset_search_list_type">资产类别:</string>
    <string name="asset_search_list_place">存放地点:</string>
    <string name="status_loading_more">正在加载更多数据...</string>

    <!-- Strings related to asset info dialog -->
    <string name="asset_info_title">物品详情:</string>
    <string name="inv_asset_info_title">盘点信息:</string>
    <string name="asset_info_code">资产编码:</string>
    <string name="asset_info_fincode">财务编码:</string>
    <string name="asset_info_name">资产名称:</string>
    <string name="asset_info_specification">规格型号:</string>
    <string name="asset_info_type">资产类型:</string>
    <string name="asset_info_category">资产类别:</string>
    <string name="asset_info_mgr_organ_name">管理部门:</string>
    <string name="asset_info_organ_name">使用部门:</string>
    <string name="asset_info_place">存放地点:</string>
    <string name="asset_info_operator">使用人:</string>
    <string name="asset_info_original_value">原值:</string>
    <string name="asset_info_date">使用日期:</string>
    <string name="asset_info_use_age">使用年限:</string>
    <string name="asset_info_status">当前状态:</string>
    <string name="asset_info_starbar">星级</string>
    <string name="asset_info_note">备注</string>
    <string name="inv_asset_info_invMsg">盘点记录:</string>
    <string name="inv_dialog_positive">确认盘点</string>
    <string name="inv_dialog_negative">不符项目</string>

    <!-- Strings related to asset inventory -->
    <string name="asset_inventory_title">资产盘点</string>
    <string name="asset_inventory_scan_title">扫描二维码</string>
    <string name="asset_inventory_btn_scan">扫描</string>
    <string name="asset_inventory_btn_inventory">情况</string>
    <string name="asset_inventory_btn_manual">手录</string>
    <string name="asset_inventory_btn_end">结束</string>
    <string name="asset_inventory_organ">使用部门</string>
    <string name="asset_inventory_scan_progress">正在加载...</string>
    <string name="asset_inventory_continue_title">盘点成功</string>
    <string name="continue_dialog_continue">继续盘点</string>
    <string name="continue_dialog_stop">终止盘点</string>
    <!--<string name="asset_update_title">资产盘点</string>-->

    <!-- Strings related to asset inventory records -->
    <string name="asset_inv_records_title">资产盘点记录查询</string>
    <string name="asset_inv_records_cate">资产类别</string>
    <string name="asset_inv_records_status">盘点情况</string>
    <string name="asset_inv_records_match">匹配类型</string>
    <string name="asset_inv_records_place">存放地点</string>

    <!-- Strings related to asset inventory records -->
    <string name="asset_manual_title">手动录入</string>
    <string name="asset_manual_subTitle">请输入资产编码或财务编码</string>

    <!-- Strings related to QR show -->
    <string name="QR_scan_title">扫描二维码</string>
    <string name="QR_scan_continue">继续</string>
    <string name="QR_scan_cancel">停止</string>

    <!-- Strings related to offline inventory -->
    <string name="offline_asset_inventory_title">离线资产盘点</string>
    <string name="offline_asset_inventory_upload">数据上传</string>
    <string name="offline_asset_inventory_uploading">正在上传...</string>
    <string name="offline_asset_inventory_delete">数据删除</string>
    <string name="offline_asset_inventory_check_all">全选</string>
    <string name="offline_asset_inventory_check_reverse">反选</string>
    <string name="offline_asset_inventory_existed_asset">重复盘点</string>
    <string name="offline_asset_inventory_existed_replace">覆盖</string>
    <string name="offline_asset_inventory_existed_continue">继续盘点其他资产</string>
    <string name="offline_data_download">离线数据下载</string>
    <string name="offline_data_download_btn">点击下载</string>
    <string name="offline_asset_download_msg">下载信息</string>
    <string name="offline_asset_download_organ">部门名称</string>
    <string name="offline_asset_download_date">下载日期</string>
    <string name="offline_asset_download_downloading">正在下载...</string>
    <string name="offline_asset_inventory_list_detail">详情</string>
    <string name="offline_inventory_list_detail_title">待上传盘点记录:</string>
</resources>
