<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_asset_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.inventorysystem.activities.AssetInventory">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="@+id/activity_asset_inventory"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_asset_inventory_title"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/activity_asset_inventory"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_inventory_organ"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/asset_inventory_title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textSize="20dp"
        android:padding="16dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:textColor="@color/background_material_light"
        android:id="@+id/textView_asset_inventory_title"
        app:layout_constraintLeft_toLeftOf="@+id/activity_asset_inventory"
        app:layout_constraintTop_toTopOf="@+id/activity_asset_inventory"
        app:layout_constraintRight_toRightOf="@+id/activity_asset_inventory" />

    <TextView
        android:text="@string/asset_inventory_organ"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/textView6"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/activity_asset_inventory"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_inventory_organ"
        app:layout_constraintRight_toRightOf="@+id/activity_asset_inventory"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:id="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="@+id/activity_asset_inventory"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_asset_inventory"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_asset_inventory"
        android:layout_marginBottom="8dp">

        <Button
            android:text="@string/asset_inventory_btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_inventory_scan"
            android:layout_weight="1" />

        <Button
            android:text="@string/asset_inventory_btn_inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_inventory_inventory"
            android:layout_weight="1" />

        <Button
            android:text="@string/asset_inventory_btn_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_inventory_manual"
            android:layout_weight="1" />

        <Button
            android:text="@string/asset_inventory_btn_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_inventory_end"
            android:layout_weight="1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
