<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_asset_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.inventorysystem.activities.AssetSearch">

    <TextView
        android:text="@string/asset_search_title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textSize="20dp"
        android:padding="16dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:textColor="@color/background_material_light"
        android:id="@+id/textView11"
        app:layout_constraintLeft_toLeftOf="@+id/activity_asset_search"
        app:layout_constraintTop_toTopOf="@+id/activity_asset_search"
        app:layout_constraintRight_toRightOf="@+id/activity_asset_search" />

    <TextView
        android:text="@string/asset_search_fincode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_asset_search"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginTop="64dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_asset_name"
        android:hint="输入名称"
        app:layout_constraintLeft_toRightOf="@+id/textView1"
        android:layout_marginStart="24dp"
        app:layout_constraintRight_toRightOf="@+id/activity_asset_search"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1" />

    <TextView
        android:text="@string/asset_search_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText_asset_name"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/textView1"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="42dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_asset_code"
        android:hint="输入编码"
        app:layout_constraintLeft_toLeftOf="@+id/editText_asset_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4" />

    <TextView
        android:text="@string/asset_search_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText_asset_code"
        android:layout_marginTop="40dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_asset_department"
        app:layout_constraintRight_toRightOf="@+id/editText_asset_code"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8" />

    <TextView
        android:text="@string/asset_search_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/spinner_asset_department"
        android:layout_marginTop="40dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_asset_type"
        app:layout_constraintRight_toRightOf="@+id/spinner_asset_department"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9" />

    <Button
        android:text="@string/dialog_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_asset_search"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="@+id/spinner_asset_type" />

</android.support.constraint.ConstraintLayout>
