<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/inv_asset_info_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView"
            android:gravity="center"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:paddingLeft="10dp"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView_asset_info_title"
            android:layout_weight="1"
            android:gravity="left|center"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:paddingLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <TextView
            android:text="@string/asset_info_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_code"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_name"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_type"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_category"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_mgr_organ_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_mgr_organ_name"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_organ_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_organ_name"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView27"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_place"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView29"
            android:layout_weight="0.06"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_operator"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_original_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView31"
            android:layout_weight="0.14"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_original_value"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView33"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_date"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_use_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView35"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_use_age"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asset_info_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView37"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_asset_info_status"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/inv_asset_info_invMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView39"
            android:paddingLeft="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_inv_asset_info_invMsg"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</LinearLayout>