<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inventory_records"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.inventorysystem.activities.InventorySearch">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:padding="16dp"
        android:text="@string/asset_inv_records_title"
        android:textColor="@color/background_material_light"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_inventory_records"
        app:layout_constraintTop_toTopOf="@+id/activity_inventory_records"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records" />

    <TextView
        android:text="@string/asset_inventory_organ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/activity_inventory_records"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginTop="48dp" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_inv_records_organ"
        app:layout_constraintLeft_toRightOf="@+id/textView16"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16" />

    <TextView
        android:text="@string/asset_inv_records_cate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/activity_inventory_records"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        android:layout_marginTop="48dp" />

    <Spinner
        android:layout_height="40dp"
        android:id="@+id/spinner_inv_records_type"
        android:layout_width="250dp"
        app:layout_constraintLeft_toRightOf="@+id/textView20"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20" />

    <TextView
        android:text="@string/asset_inv_records_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/activity_inventory_records"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        android:layout_marginTop="48dp" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_inv_records_status"
        app:layout_constraintLeft_toRightOf="@+id/textView22"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView22"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView22" />

    <TextView
        android:text="@string/asset_inv_records_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView26"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/activity_inventory_records"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        android:layout_marginTop="48dp" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/spinner_inv_records_match"
        app:layout_constraintLeft_toRightOf="@+id/textView26"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26" />

    <TextView
        android:text="@string/asset_inv_records_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView30"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/activity_inventory_records"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_inv_records_place"
        android:hint="输入存放地点..."
        android:textSize="@dimen/abc_text_size_medium_material"
        app:layout_constraintLeft_toRightOf="@+id/textView30"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@+id/textView30"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30" />

    <Button
        android:text="@string/dialog_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_inv_records_search"
        app:layout_constraintTop_toBottomOf="@+id/editText_inv_records_place"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_inventory_records"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
